# Employee_upskilling

./: .env.example  .gitignore  Dockerfile  Nextwork-Skill-Matrix3.0-Team 1.xlsx  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  resource_allocation_agent.py  roadmap_agent.py  run.py  sample_resume.txt  text.txt  youtube_client.py
.github/workflows/: ci.yml
cache/generated_roadmaps/: roadmap-agent--EMP001--ms0332822-at-gmail-com-20260702T020851Z.json  roadmap-agent--EMP001--ms0332822-at-gmail-com-20260702T021037Z.json  roadmap-agent--EMP001-20260701T172034Z.json  roadmap-agent--EMP001-20260701T172233Z.json  roadmap-agent--EMP001-20260701T172329Z.json  roadmap-agent--EMP001-20260701T173024Z.json  roadmap-agent--EMP1-20260701T181414Z.json  roadmap-agent--emp--ms0332822-at-gmail-com-20260701T165858Z.json  roadmap-agent--emp--ms0332822-at-gmail-com-20260701T171444Z.json  roadmap-agent--emp--ms0332822-at-gmail-com-20260701T172448Z.json  roadmap-agent--emp--ms0332822-at-gmail-com-20260701T173302Z.json  roadmap-agent--emp--ms0332822-at-gmail-com-20260702T020757Z.json  roadmap-agent--emp--ms0332822-at-gmail-com-20260702T021743Z.json  roadmap-agent--emp--ms0332822-at-gmail-com-20260702T022623Z.json  (+7 more)
docs/: 01_project_overview.md  02_PHASE_1_ARCHITECTURE.md  03_PHASE_2_ARCHITECTURE.md  04_PHASE_3_ARCHITECTURE.md  PHASE1_README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
src/: __init__.py  config.py  logging_config.py  main.py
tests/: conftest.py  test_agents.py  test_api_production.py  test_workflow_phase1.py
(+43 files in other folders)
