[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalized-learning-development-pathway"
version = "0.1.0"
description = "AI-powered platform for workforce intelligence, personalized employee development, and talent matching"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]